logs/dag_id=predict_v9/run_id=scheduled__2024-04-28T000000+0000/task_id=train/attempt=1.log
[2024-04-29T19:57:51.583+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-04-29T19:57:51.634+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: predict_v9.train scheduled__2024-04-28T00:00:00+00:00 [queued]>
[2024-04-29T19:57:51.645+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: predict_v9.train scheduled__2024-04-28T00:00:00+00:00 [queued]>
[2024-04-29T19:57:51.648+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 6
[2024-04-29T19:57:51.666+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): train> on 2024-04-28 00:00:00+00:00
[2024-04-29T19:57:51.686+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=1177) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-04-29T19:57:51.682+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'predict_v9', 'train', 'scheduled__2024-04-28T00:00:00+00:00', '--job-id', '8', '--raw', '--subdir', 'DAGS_FOLDER/dag_predict.py', '--cfg-path', '/tmp/tmp699_jace']
[2024-04-29T19:57:51.688+0000] {standard_task_runner.py:63} INFO - Started process 1194 to run task
[2024-04-29T19:57:51.689+0000] {standard_task_runner.py:91} INFO - Job 8: Subtask train
[2024-04-29T19:57:51.836+0000] {task_command.py:426} INFO - Running <TaskInstance: predict_v9.train scheduled__2024-04-28T00:00:00+00:00 [running]> on host d4bc696c9a4e
[2024-04-29T19:57:52.047+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='mosula' AIRFLOW_CTX_DAG_ID='predict_v9' AIRFLOW_CTX_TASK_ID='train' AIRFLOW_CTX_EXECUTION_DATE='2024-04-28T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-28T00:00:00+00:00'
[2024-04-29T19:57:52.052+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-04-29T19:57:52.435+0000] {logging_mixin.py:188} WARNING - /opt/***/dags/dag_predict.py:22 UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.
[2024-04-29T19:57:54.200+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-04-29T19:57:54.206+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/dag_predict.py", line 43, in predict
    cur.execute(sql)
psycopg2.errors.SyntaxError: syntax error at or near "Index"
LINE 2:             INSERT INTO churn_raw Index(['customer_id', 'his...
                                          ^

[2024-04-29T19:57:54.277+0000] {taskinstance.py:1205} INFO - Marking task as UP_FOR_RETRY. dag_id=predict_v9, task_id=train, execution_date=20240428T000000, start_date=20240429T195751, end_date=20240429T195754
[2024-04-29T19:57:54.309+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 8 for task train (syntax error at or near "Index"
LINE 2:             INSERT INTO churn_raw Index(['customer_id', 'his...
                                          ^
; 1194)
[2024-04-29T19:57:54.367+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-04-29T19:57:54.396+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-04-29T19:57:54.400+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
